--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,10 @@
   <meta charset="utf-8">
   <title>Ionic App</title>
 
-  <base href="https://theartezan.xyz/ionic4/">
+  <base href="http://31.220.52.51:3002">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-
-  <!-- ionic cnd -->
-  <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
 
 
   <!-- add to homescreen for ios -->
