--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
   <title>Ionic App</title>
 
@@ -16,8 +18,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<link rel="stylesheet" href="styles.002314d82bf217a630c5.css"></head>
+<link rel="stylesheet" href="styles.969aa4b604fd0658be68.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.49ef008d402108ba5e73.js"></script><script type="text/javascript" src="polyfills.b477185db48930c2c34c.js"></script><script type="text/javascript" src="main.37190aa18b93f6f5a450.js"></script></body>
+<script type="text/javascript" src="runtime.49ef008d402108ba5e73.js"></script><script type="text/javascript" src="polyfills.20c991e984e3d18c71f4.js"></script><script type="text/javascript" src="main.509c6fb9219992217008.js"></script></body>
 </html>
