--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Ionic App</title>
+  <title>CobianApp</title>
 
   <base href="http://31.220.52.51:3002">
 
@@ -17,9 +18,21 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- one Signal -->
+  <link rel="manifest" href="/manifest.json" />
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async="async"></script>
+  <!--  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "03441d74-5974-4324-8dce-c7cd5c9dcfd9",
+      });
+    });
+  </script> -->
+<link rel="stylesheet" href="styles.630833b4080f59d1a5c1.css"></head>
 
-<link rel="stylesheet" href="styles.b8bc1ed5bc93ed21dfc7.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.49ef008d402108ba5e73.js"></script><script type="text/javascript" src="polyfills.20c991e984e3d18c71f4.js"></script><script type="text/javascript" src="main.e5943510a31bfeeb4115.js"></script></body>
+<script type="text/javascript" src="runtime.49ef008d402108ba5e73.js"></script><script type="text/javascript" src="polyfills.20c991e984e3d18c71f4.js"></script><script type="text/javascript" src="main.a26a936318ceded6fdc3.js"></script></body>
+
 </html>
