--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,11 @@
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"> -->
   <meta charset="utf-8">
   <title>CobianApp</title>
 
-  <base href="/" />
+  <base href="http://31.220.52.51:3005">
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -33,6 +34,6 @@
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.47f6b04047a57ebb3d24.js"></script><script type="text/javascript" src="polyfills.303805b39647875e49c4.js"></script><script type="text/javascript" src="cordova.b8b05ba265b9ff1d69c8.js"></script><script type="text/javascript" src="main.1c1acf48cc1a0cd337a7.js"></script></body>
+<script type="text/javascript" src="runtime.47f6b04047a57ebb3d24.js"></script><script type="text/javascript" src="polyfills.303805b39647875e49c4.js"></script><script type="text/javascript" src="main.81171d7639bc222855f7.js"></script></body>
 
 </html>
