--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <title>CobianApp</title>
 
-  <base href="/" />
+  <base href="http://31.220.52.51:3005">
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -34,6 +34,6 @@
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.4149e98a4dc47ef7dcc2.js"></script><script type="text/javascript" src="polyfills.c1a38b41add69f4eeadd.js"></script><script type="text/javascript" src="cordova.17fb1a7c009cbc8d5d42.js"></script><script type="text/javascript" src="main.b24da0c27d58f4c02b9d.js"></script></body>
+<script type="text/javascript" src="runtime.47f6b04047a57ebb3d24.js"></script><script type="text/javascript" src="polyfills.303805b39647875e49c4.js"></script><script type="text/javascript" src="main.1fa532654957aa898a7c.js"></script></body>
 
 </html>
