--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <title>CobianApp</title>
 
-  <base href="http://app.inmobiliariacobian.com:3005">
+  <base href="http://app.inmobiliariacobian.com">
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
